<resources>
    <string name="app_name">読書管理アプリ</string>
    <string name="registerButton">読む本を登録する</string>
    <string name="Book_name_input">1.読んだ本の名前を入力してください</string>
    <string name="Book_read_deadline">2.いつ読んだかを入力してください</string>
    <string name="Book_notice">3.本を読んで気づいたこと・学んだこと</string>
    <string name="Book_actionPlan">4.アクションプラン</string>
    <string name="Book_save_buuton">保存</string>
    <string name="Book_name_view">本の名前</string>
    <string name="Book_deadline_view">読み終わった日付</string>
    <string name="Book_Notice_view">気づいたこと・学んだこと</string>
    <string name="Book_ActionPlan_view">アクションプラン</string>
    <string name="Back_Button">戻る</string>
    <string name="Change_Button">変更</string>
    <string name="Delete_Button">削除</string>
    <string name="dialog_title">アクションプランの確認</string>
    <string name="dialog_msg">前回決めたアクションプランは実行できていますか？</string>
    <string name="dialog_ok">はい</string>
    <string name="dialog_ng">いいえ</string>
</resources>
