<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_name_view"
        android:textSize="20sp" />



    <TextView
        android:id="@+id/book_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>




    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_deadline_view"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/book_deadline_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_Notice_view"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/book_notice_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_ActionPlan_view"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/book_actionplan_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        android:text="本の画像"/>

    <ImageView
        android:id="@+id/book_image_view"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back_Button"
        android:onClick="onBackButton"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/ChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onChangeButton"
            android:layout_weight="1"
            android:text="@string/Change_Button" />

    </LinearLayout>



</LinearLayout>






