<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_name_input"/>

    <EditText
        android:id="@+id/Book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_read_deadline"/>

    <EditText
        android:id="@+id/Book_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Book_notice"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Book_notice"
        android:inputType="textMultiLine"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Book_actionPlan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Book_actionPlan"
        android:inputType="textMultiLine"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="5.本の表紙を撮ってください"/>

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:onClick="onCameraImageClick"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button_register"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/Back_Button"
                android:onClick="onBackButtonRegister"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/image_rotation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="画像を回転"
                android:onClick="onImageRotation"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/BarCodeSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBarCodeSearch"
                android:text="バーコード検索" />




        </LinearLayout>



        <Button
            android:id="@+id/save_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/Book_save_buuton"
            android:onClick="onSaveButton"
            android:layout_weight="1"/>

    </LinearLayout>




</ScrollView>