<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Book_name_input"/>

        <EditText
            android:id="@+id/Book_name_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Book_read_deadline"/>

        <EditText
            android:id="@+id/Book_deadline_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_notice"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Book_notice_change"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_actionPlan"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Book_actionPlan_change"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5.本の表紙を撮ってください"/>

        <ImageView
            android:id="@+id/ImageChange"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="50dp"
            android:layout_height="80dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:onClick="onCameraImageChangeClick"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        
        <Button
            android:id="@+id/image_rotation"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="画像を回転する"
            android:layout_weight="1"
            android:onClick="onImageRotation"/>

        <Button
            android:id="@+id/change_button"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Change_Button"
            android:layout_weight="1"
            android:onClick="onChangeButton"/>

        </LinearLayout>


    </LinearLayout>




</ScrollView>